# finxi-galaxy

./: .flake8  .gitignore  Procfile  README.md  manage.py  pyproject.toml  pyup.yml  requirements.txt
.gihub/workflows/: django.yml
.github/workflows/: django.yml
contrib/: env-sample
droid/: asgi.py  settings.py  urls.py  wsgi.py
droid/api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
droid/api/migrations/: 0001_initial.py  0002_auto_20200803_1738.py
droid/base/: admin.py  apps.py
droid/base/migrations/: 0001_initial.py
